# onthoudhet-kiosk

./: Cargo.toml  build.sh
.cargo/: config.toml
src/: a  main.rs  main.txt
