[package]
name = "onthoudhet-kiosk"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas","tokio","debug", "image", "advanced","lazy"] }
image = { version = "0.25.10", features = ["png"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }  # For JSON parsing
serde_json = "1.0"  # JSON handling
iced_webview_v2 = { version = "0.1.11", default-features = false, features = ["litehtml"] }
